--- a/lista-productos/package.json
+++ b/lista-productos/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "bulma": "^1.0.2",
+    "emoji-picker-react": "^4.12.0",
+    "lista-productos": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
